# personal-rag-dashboard

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup_workspace.bat  switch_linked_branch.ps1  sync_current_branch.bat  sync_linked_branch.bat  update_submodules.bat
.claude/: settings.json
.github/: AGENT_RULES.md  AGENT_WORKFLOW.md  README.md  copilot-instructions.md
ai_conversations_summary/: .gitignore  .gitignore.main.backup  .gitignore.private-data-branch.example  LICENSE  README.md  WORKFLOW_UPGRADE.md  embedding_runtime.py  launch_gui.py  launch_web.bat  launch_web.py  prompt.md  requirements.txt  runtime_paths.py  setup.bat  sync_release.bat
core_service/: __init__.py  auth.py  bug_ticket_payloads.py  chat_feedback_store.py  config.local.example.json  config.py  dashboard_job_sync.py  feedback.py  lan_auth.py  llm.py  llm_client.py  observability.py  rag_vector_index.py  report_engine.py  reporting.py  runtime_data.py  runtime_migration_cli.py  ticket_reference_import.py  ticket_store.py  tickets.py  trace_store.py  usage_sync.py
data/: custom_cards.json  nav_dashboard_deploy.json
library_tracker/: .gitignore  README.md  csv_extract.py  deploy_lan_web.bat  game_csv_extract.py  launch_web.bat  launch_web.py  launch_worker.py  luanch_web.bat  music_csv_extract.py  requirements.txt  setup.bat
nav_dashboard/: .gitignore  README.md  deploy_lan_web.bat  launch_web.bat  launch_web.py  requirements.txt
scripts/: .gitignore  README.md  _check_appjs.js  _patch_ask_rag.py  _patch_dashboard_refactor.py  bug_ticket_sync_hook.py  (+13 more)
(+299 files in other folders)
